# Rule-Generator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: llm_config.yaml
output/: load_order.sql  load_order_1.sql  load_order_expire.sql  load_order_replace.sql  test_append_2.sql
prototypes/: Sample_Append.sql
src/cli/: main.py
src/core/: prompt_builder.py  rule_generator.py  validator.py
src/llm/: __init__.py  client.py
src/loaders/: prototype_loader.py
src/models/: rule_config.py
templates/: system_prompt.txt
tests/: test_rule_generator.py
